    HAMA-25: Add matrix addition example (edwardyoon)
    HAMA-23: Add Hama configuration files (edwardyoon)
    HAMA-6: Add a 'who we are' page (edwardyoon)
    HAMA-7: Add some information for a new comer (edwardyoon)
    HAMA-1: Create the Hama web site (edwardyoon via Ian Holsman)
    HAMA-2: The intial donation of Hama from the google project (edwardyoon)
    
  IMPROVEMENTS
    
    HAMA-114: Remove unwanted code (edwardyoon)
    HAMA-107: Blocking job should be a map/reduce job (samuel via edwardyoon)
    HAMA-99: Implement setColumn(int column, Vector vector) (edwardyoon)
    HAMA-108: Implement add(int i, int j, double value) (edwardyoon)
    HAMA-103: Reduce an rows of intermediate 
                to improve the multiplication performance (edwardyoon)
    HAMA-88: DenseMatrix.close should not delete the table 
               that are aliased in HamaAdmin. (samuel via edwardyoon)
    HAMA-89: Exception Handling of a ParseException (samuel via edwardyoon)
    HAMA-77: clear the matrices in hbase after 
               quiting the shell (samuel via edwardyoon)
    HAMA-28: Implement Vector.add() method (edwardyoon)
    HAMA-78: Separate Interface and Implementation for HamaAdmin (edwardyoon)
    HAMA-76: Remove load() since it duplicated with constructor (edwardyoon)
    HAMA-74: set the number of map/reduce task 
               on the shell (samuel via edwardyoon)
    HAMA-73: Add setNumMap/ReduceTasks() to HamaConfiguration (edwardyoon)
    HAMA-60: Add an arguments for handle parallel degree
               to MatrixAddition (edwardyoon)
    HAMA-68: Shell parser JUnit test cases (samuel via edwardyoon)
    HAMA-65: Remove the information of an inactive committers (edwardyoon) 
    HAMA-58: Remove duplicated code (edwardyoon)
    HAMA-56: Add setRow(int row, Vector vector) method to matrix (edwardyoon)
    HAMA-39: IO operations should throws an IOException (edwardyoon)
    HAMA-52: Fixture setup (edwardyoon)